# memory-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  pyproject.toml
claude-code-plugin/: README.md
claude-code-plugin/commands/: save.md  search.md  status.md
claude-code-plugin/hooks/: session-start.sh  stop.sh
claude-code-plugin/skills/save-memory/: SKILL.md
claude-code-plugin/skills/search-memory/: SKILL.md
cli/: pyproject.toml
cli/src/memory_mcp_cli/: client.py  config.py  main.py
cli/tests/: test_cli.py
docs/: behavioral-guidance.md  prd.md  testing.md
docs/superpowers/plans/: 2026-03-25-memory-mcp-extension.md
docs/superpowers/specs/: 2026-03-24-memory-mcp-extension-design.md
src/memory_mcp/: __init__.py  __main__.py  config.py  server.py
src/memory_mcp/api/: routes.py
src/memory_mcp/engine/: conflict.py  embedding.py  evolution.py  extraction.py  models.py  working_memory.py
src/memory_mcp/storage/: __init__.py  graph.py  vector.py
src/memory_mcp/tools/: __init__.py  forget.py  graph_query.py  recall.py  recall_all.py  relate.py  remember.py  trace.py  unrelate.py
src/memory_mcp/transport/: __init__.py  auth.py  cors.py  streamable_http.py
tests/: conftest.py  test_api.py  test_extraction.py  test_tools.py  test_transport.py  test_vector_backend.py  test_working_memory.py
